# term-music

./: .gitignore  LICENCE.txt  README.md  app.py  app_data.py  config.py  keyboard.py  main.py  music_library.py  player.py  pyproject.toml  setup.cfg  test.py  ui.py
domain/: music_library.py  song.py
term_music/: app.py  app_data.py  commands.py  config.py  keyboard.py  main.py  player.py  ui.py  util.py
term_music/domain/: music_library.py  playlist.py
